--- a/desafio.html
+++ b/desafio.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio</title>
 </head>
+<style>
+    li{
+        padding: 10px;
+    }
+</style>
 <body>
 
+    <h1>Desafio:</h1>
+    <hr>
     <ul id="usuarios"></ul>
+
+    <hr>
+    <h2>Outra forma: </h2>
+    <button id="carregar">Carregar dados</button>
+    <div id="lista-de-usuarios"></div>
 
 
 <script src="desafio.js"></script>
